# KuickMoney

./: Cargo.toml  README.md
.github/workflows/: build.yml
frontend/: index.html
src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
